crates/pato/tests/fixtures/invalid/P003_identified.gram
@@meta:Doc @source(primary) @source(backup) (alice:Person)
